--- a/style.css
+++ b/style.css
@@ -38,9 +38,9 @@ body {
         opacity: 1;
     }
 
-    #foto {
-        /* width: clamp(200px, 50%, 400px);
-        width: clamp(400px, 50%, 600px); */
-    }
+    /* #foto {
+        width: clamp(150px, 30%, 400px);
+        height: clamp(300px, 10%, 600px);
+    } */
 }
 
